# bluesky-web-plotting

./: README.md  pyproject.toml
bluesky_web_plots/: __init__.py  __main__.py  callback.py  logger.py  utils.py
bluesky_web_plots/figures/: array.py  base_figure.py  sample_map.py  scalar.py
bluesky_web_plots/structures/: __init__.py  array.py  base_structure.py  sample_map.py  scalar.py
bluesky_web_plots/web_plots/: __init__.py  callback.py  server.py
examples/: sample_map.py  sample_map_zmq_service.py  scalar.py
tests/: conftest.py  example.py  mock_devices.py  test_zmq_service.py
