[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesky-web-plots"
classifiers = ["Programming Language :: Python :: 3.12"]
description = "Dash + plotly bluesky plotting sevice/callback."
dependencies = ["plotly[express]", "zmq", "event-model", "nicegui"]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
GitHub = "https://github.com/evvaaaa"

[[project.authors]]
email = "eva.lott@helmholtz-berlin.de"
name = "Eva Lott"

[project.optional-dependencies]
dev = ["ruff", "pyright", "bluesky", "ophyd_async", "aioca"]

[tool.setuptools_scm]
version_file = "bluesky_web_plots/_version.py"
